@@ -7,7 +7,7 @@ import org.openjdk.jmh.infra.*
 
 @Fork(
   value = 1,
-  jvmArgsAppend = Array("-Xmx1G", "--add-opens=java.base/java.lang=ALL-UNNAMED")
+  jvmArgsAppend = Array("-Xmx1G")
 )
 @State(Scope.Benchmark)
 class LongItemBenchmark:
